Corrección de errores menores

--- a/covidepican.ipynb
+++ b/covidepican.ipynb
@@ -167,7 +167,7 @@
     "plt.rcParams[\"figure.figsize\"] = [12, 9]\n",
     "\n",
     "## Conectar con la base de datos\n",
-    "# El fichero csv se ha convertido a formato sqlite3. Ver convert-cv19.sh.\n",
+    "# El fichero csv se ha convertido a formato sqlite3. Ver covidepican.sh.\n",
     "sql3 = sqlite3.connect(\"covidepican.sql3\")\n",
     "casos = pd.read_sql_query(\"SELECT * FROM tiempos LIMIT 5\", sql3)\n",
     "\n",
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4218a9f6",
+   "id": "a7f5a926",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "164a7d8e",
+   "id": "0d804de2",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "725c96fb",
+   "id": "c7cbf0c4",
    "metadata": {
     "scrolled": false
    },
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "29a56775",
+   "id": "fc3fdc0f",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "59370fba",
+   "id": "4eda7a54",
    "metadata": {
     "scrolled": false
    },
